--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "orbite",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "description": "Take TODO application to the MOON!",
+  "author": {
+    "email": "richard@richardhnguyen.com",
+    "name": "Richard H. Nguyen",
+    "url": "https://richardhnguyen.com/"
+  },
+  "license": "MIT",
+
   "type": "module",
+  "keywords": [
+    "react",
+    "typescript",
+    "todo"
+  ],
   "scripts": {
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "lint": "eslint .",
+    "test": "echo \"There is no test available at this moment!\""
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,8 +32,29 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.29.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "directory": "./",
+    "url": "https://github.com/richardnguyen99/orbite"
+  },
+  "bugs": {
+    "email": "richard@richardhnguyen.com",
+    "url": "https://github.com/richardnguyen99/orbite/issues"
   }
 }
