--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "orbite",
   "private": true,
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Take TODO application to the MOON!",
   "author": {
     "email": "richard@richardhnguyen.com",
@@ -9,7 +9,6 @@
     "url": "https://richardhnguyen.com/"
   },
   "license": "MIT",
-
   "type": "module",
   "keywords": [
     "react",
@@ -35,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -44,7 +44,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
+    "postcss": "^8.4.20",
     "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
