--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "test": "echo \"There is no test available at this moment!\""
   },
   "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.5.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.15",
