--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "echo \"There is no test available at this moment!\""
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
