--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "echo \"There is no test available at this moment!\""
   },
   "dependencies": {
+    "@primer/octicons-react": "^17.10.0",
     "classnames": "^2.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
