--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@heroicons/react": "^2.0.13",
     "@primer/octicons-react": "^17.10.0",
     "classnames": "^2.3.2",
+    "framer-motion": "^7.10.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
