Add Task Context and setter methods for maintaining and updating tasks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
       "@components/*": ["./src/components/*"],
       "@assets": ["./src/assets"],
       "@assets/*": ["./src/assets/*"],
+      "@hooks": ["./src/hooks"],
+      "@hooks/*": ["./src/hooks/*"],
       "@typings": ["./src/typings"],
       "@typings/*": ["./src/typings/*"],
       "@pages/*": ["./src/pages/*"],
