--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
       "@assets/*": ["./src/assets/*"],
       "@hooks": ["./src/hooks"],
       "@hooks/*": ["./src/hooks/*"],
+      "@utils": ["./src/utils"],
+      "@utils/*": ["./src/utils/*"],
       "@typings": ["./src/typings"],
       "@typings/*": ["./src/typings/*"],
       "@pages/*": ["./src/pages/*"],
