--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@popperjs/core": "^2.11.6",
     "@primer/octicons-react": "^17.10.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
@@ -36,6 +37,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
     "react-router-dom": "^6.5.0",
     "sort-by": "^1.2.0"
   },
